PEH-3275 - Participant Card Header Title and Learn More not aligned correctly
Set a max width for the title to keep the Learn More on the top right and then wrap for smaller/mobile screens. Added space under Participant Fields. Removed the no-wrap for the Study Location for smaller devices so that it doesn't cut off.

--- a/force-app/main/default/aura/ParticipantCardHeader/ParticipantCardHeader.css
+++ b/force-app/main/default/aura/ParticipantCardHeader/ParticipantCardHeader.css
@@ -2,9 +2,10 @@
  * Created by Leonid Bartenev
  */
 
- .THIS {
+.THIS {
     padding: 0 16px;
 }
+
 .THIS > div {
     display: flex;
     justify-content: space-between;
@@ -56,32 +57,23 @@
 .THIS .objective-link {
     white-space: nowrap;
     font-size: 1rem;
-    width: 545px;
+   /* width: 540px; */
     display: inline-block;
     text-align: right;
-}
-
-.THIS .objective-linkGSK {
-    white-space: nowrap;
-    font-size: 1rem;
-    width: 510px;
-    display: inline-block;
-    text-align: right;
+    margin-top: 2px;
 }
 .THIS .objective-linkRTL {
     white-space: nowrap;
     font-size: 1rem;
-    width: 540px;
+   /*  width: 540px; */
     display: inline-block;
     text-align: left;
+    margin-top: 2px;
 }
 
-.THIS .objective-linkRTLGSK {
-    white-space: nowrap;
-    font-size: 1rem;
-    width: 500px;
-    display: inline-block;
-    text-align: left;
+.THIS .slds-media__body > div:first-child {
+    display: flex;
+    justify-content: space-between;
 }
 
 .THIS .vpi-title,
@@ -90,6 +82,7 @@
     font-weight: 600;
     color: #000;
     display: inline-block;
+    width: 80%;
 }
 
 .THIS.rtl .vpi-tile-title {
@@ -157,6 +150,10 @@
         padding: 0;
     }
 
+    .THIS .slds-media__body > div:first-child {
+        flex-wrap: wrap;
+    }
+
     .THIS .vpi-title {
         width: 50%;
         line-height: 1.25;
@@ -166,6 +163,11 @@
     .THIS .slds-has-block-links--space2,
     .THIS .slds-has-block-links--space3 {
         right: 0;
+    }
+
+    .THIS .sponsor-name {
+        height: auto;
+        white-space: normal;
     }
 
     /*.THIS .custom-plus {
